# iot-consuming-service

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: main.py
app/commands/: imvoker.py  retrieve_data.py
app/comsumers/: command.py
app/consumers/: command.py
app/core/config/: base.py  config.py  rabbitmq.py
app/decorators/: retry.py
app/devices/: device_factory.py  light.py  motion.py  temperature.py
app/enums/: commands.py  device_type.py  queues.py
app/factory/: light.py  motion.py  temperature.py
app/interfaces/: command.py  consumer.py  device.py  rabbitmq.py
app/managers/: rabbitmq.py  stream.py
app/schemas/: commands.py
app/services/: rabbitmq.py
